<resources>
    <string name="app_name">160 Project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_screen_label">Home Screen</string>
    <string name="exercise_selector_screen_label">Pick Exercise</string>
    <string name="body_details_screen_label">Enter Body Details</string>
    <string name="running_screen_label">Running Screen</string>
    <string name="loading_screen_label">Loading Screen</string>
    <string name="map_label">Map</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_chi">Welcome,\nChithra Anand!</string>
    <string name="this_past_w">This past week...</string>
    <string name="saturday">Saturday</string><string name="september">25 September</string>
    <string name="you_spent">You spent</string>
    <string name="and_burned">And burned</string>
    <string name="some_id">240</string>
    <string name="minutes">Minutes</string>
    <string name="num">537</string>
    <string name="cals">Calories</string>
    <string name="your_activi">Your activities were...</string>
    <string name="walk">Walk</string>
    <string name="run">Run</string>
    <string name="bike">Bike</string>
    <string name="walkNum">810</string>
    <string name="steps">Steps</string>
    <string name="runNum">23</string>
    <string name="bikeNum">2</string>
    <string name="miles">Miles</string>
    <string name="start_recor">Start recording new activity</string>
    <string name="bodyDetails">Enter your body details</string>
    <string name="miles_dist">Miles Distance</string>
    <string name="step_dist">Step Distance</string>
    <string name="lower_cals">calories</string>
    <string name="default_distance">0.0</string>
    <string name="default_step_distance">0</string>
    <string name="record">RECORD</string>
    <string name="stop">STOP</string>

    <string name="input_stats">Input your stats...</string>
    <string name="run_option">Running</string>
    <string name="bike_option">Biking</string>
    <string name="row_option">Rowing</string>
    <string name="freeweight_option">Free Weights</string>
    <string name="stair_option">Stair Climbing</string>
    <string name="age_entry">Enter your age here</string>
    <string name="back_button">Back</string>
</resources>
