<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseSelectorScreen">

    <Button
        android:id="@+id/button"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="10dp"
        android:text="@string/run_option"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="10dp"
        android:text="@string/bike_option"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="10dp"
        android:text="@string/row_option"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="10dp"
        android:text="@string/freeweight_option"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="20dp"
        android:text="@string/stair_option"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bak1" />

</androidx.constraintlayout.widget.ConstraintLayout>