<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeScreen">

<!--    <fragment-->
<!--        android:id="@id/nav_host_fragment_content_main"-->
<!--        tools:layout="@layout/content_main">-->

<!--        <action-->
<!--            android:id="@+id/return_to_HomeScreen"-->
<!--            app:destination="@id/HomeScreen" />-->
<!--    </fragment>-->

    <fragment
        android:id="@+id/HomeScreen"
        android:name="com.example.a160project.HomeScreen"
        android:label="@string/home_screen_label"
        tools:layout="@layout/fragment_home_screen">

        <action
            android:id="@+id/action_HomeScreen_to_ExerciseSelector"
            app:destination="@id/ExerciseSelector" />
        <action
            android:id="@+id/action_HomeScreen_to_BodyDetails"
            app:destination="@id/BodyDetails" />
    </fragment>

    <fragment
        android:id="@+id/BodyDetails"
        android:name="com.example.a160project.BodyDetailsScreen"
        android:label="@string/body_details_screen_label"
        tools:layout="@layout/fragment_body_details_screen">

        <action
            android:id="@+id/action_BodyDetails_to_HomeScreen"
            app:destination="@id/HomeScreen" />
    </fragment>

    <fragment
        android:id="@+id/ExerciseSelector"
        android:name="com.example.a160project.ExerciseSelectorScreen"
        android:label="@string/exercise_selector_screen_label"
        tools:layout="@layout/fragment_exercise_selector_screen">

        <action
            android:id="@+id/action_ExerciseSelector_to_RunningScreen"
            app:destination="@id/RunningScreen" />
        <action
            android:id="@+id/action_ExerciseSelector_to_HomeScreen"
            app:destination="@id/HomeScreen" />
    </fragment>

    <fragment
        android:id="@+id/RunningScreen"
        android:name="com.example.a160project.RunningScreen"
        android:label="@string/running_screen_label"
        tools:layout="@layout/fragment_running_screen">

        <action
            android:id="@+id/action_RunningScreen_to_HomeScreen"
            app:destination="@id/HomeScreen" />
    </fragment>

</navigation>